--- a/practiceapp/build.gradle
+++ b/practiceapp/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'ch.qos.logback:logback-classic'
+    implementation 'ch.qos.logback:logback-core'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
