--- a/practiceapp/src/main/resources/application.properties
+++ b/practiceapp/src/main/resources/application.properties
@@ -17,5 +17,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.springframework.security=DEBUG
-logging.level.root=DEBUG
+logging.level.org.springframework.security=INFO
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.org.springframework.boot=INFO
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate=INFO
+logging.level.org.springframework.orm.jpa=INFO
+
+LOG_DIR=/c/projects/practiceapp/practiceapp/logs
